--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,51 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/StudAttSystem
 endorsed.classpath=
 excludes=
-file.reference.commons-collections4-4.4.jar=C:\\Users\\Wisss\\Downloads\\JARS\\commons-collections4-4.4.jar
-file.reference.commons-compress-1.21.jar=C:\\Users\\Wisss\\Downloads\\JARS\\commons-compress-1.21.jar
-file.reference.commons-io-2.18.0.jar=C:\\Users\\Wisss\\Downloads\\JARS\\commons-io-2.18.0.jar
-file.reference.commons-lang3-3.17.0.jar-1=C:\\Users\\Wisss\\Downloads\\JARS\\commons-lang3-3.17.0.jar
-file.reference.core-3.5.3.jar=C:\\Users\\Wisss\\Downloads\\JARS\\core-3.5.3.jar
-file.reference.itextpdf-5.5.13.4.jar=C:\\Users\\Wisss\\Downloads\\JARS\\itextpdf-5.5.13.4.jar
-file.reference.javase-3.5.3.jar=C:\\Users\\Wisss\\Downloads\\JARS\\javase-3.5.3.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Wisss\\Downloads\\JARS\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcommon-1.0.23.jar=C:\\Users\\Wisss\\Downloads\\JARS\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19.jar-1=C:\\Users\\Wisss\\Downloads\\JARS\\jfreechart-1.0.19.jar
-file.reference.log4j-api-2.20.0.jar=C:\\Users\\Wisss\\Downloads\\JARS\\log4j-api-2.20.0.jar
-file.reference.log4j-core-2.20.0.jar=C:\\Users\\Wisss\\Downloads\\JARS\\log4j-core-2.20.0.jar
-file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\Wisss\\Downloads\\JARS\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
-file.reference.opencsv-5.9.jar-1=C:\\Users\\Wisss\\Downloads\\JARS\\opencsv-5.9.jar
-file.reference.poi-5.2.3.jar=C:\\Users\\Wisss\\Downloads\\JARS\\poi-5.2.3.jar
-file.reference.poi-ooxml-5.2.3.jar=C:\\Users\\Wisss\\Downloads\\JARS\\poi-ooxml-5.2.3.jar
-file.reference.poi-ooxml-lite-5.2.3.jar=C:\\Users\\Wisss\\Downloads\\JARS\\poi-ooxml-lite-5.2.3.jar
-file.reference.xmlbeans-5.1.1.jar=C:\\Users\\Wisss\\Downloads\\JARS\\xmlbeans-5.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.core-3.5.3.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.javase-3.5.3.jar}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.itextpdf-5.5.13.4.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}:\
-    ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-compress-1.21.jar}:\
-    ${file.reference.commons-io-2.18.0.jar}:\
-    ${file.reference.log4j-api-2.20.0.jar}:\
-    ${file.reference.log4j-core-2.20.0.jar}:\
-    ${file.reference.poi-ooxml-5.2.3.jar}:\
-    ${file.reference.poi-ooxml-lite-5.2.3.jar}:\
-    ${file.reference.xmlbeans-5.1.1.jar}:\
-    ${file.reference.poi-5.2.3.jar}:\
-    ${file.reference.commons-lang3-3.17.0.jar-1}:\
-    ${file.reference.opencsv-5.9.jar-1}
+    ${libs.StudentAttendanceSystem.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${libs.StudentAttendanceSystem.classpath}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
